<?xml version="1.0"?>
<package format="2">
  <name>acados</name>
  <version>0.0.1</version>
  <description>acados as a wrapped colcon package</description>
  <maintainer email="joscha.bongard@tum.de">Joscha Bongard</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
